# ma-analyst

./: .gitignore  Prospecting 336e72003461800386fec7f2cc7b3dd4.md  README.md  SOLUTION_DESIGN.md
ma-prospecting-platform/: .gitignore  Makefile  RUN_LOCALLY.md  RUN_LOCALLY_v2.md  docker-compose.yml
ma-prospecting-platform/backend/: .env.example  Dockerfile  ma_prospecting.db  pyproject.toml
ma-prospecting-platform/backend/app/: config.py  dependencies.py  main.py
ma-prospecting-platform/backend/app/cache/: cache_manager.py  keys.py
ma-prospecting-platform/backend/app/clients/: anthropic_client.py  claude_search_client.py  exa_client.py  fmp_client.py  scraper.py
ma-prospecting-platform/backend/app/models/: chat.py  common.py  pipeline.py  prospect.py  scoring.py  signal.py  target.py
ma-prospecting-platform/backend/app/prompts/: chat.py  claude_search.py  prospect_generation.py  scoring.py  signal_extraction.py  signal_gather_plan.md  target_profiling.py
ma-prospecting-platform/backend/app/routers/: chat.py  health.py  pipeline.py
ma-prospecting-platform/backend/app/services/: chat_service.py  pipeline_orchestrator.py  prospect_generator.py  scorer.py  signal_extractor.py  target_profiler.py
ma-prospecting-platform/backend/app/storage/: database.py  repositories.py
ma-prospecting-platform/backend/app/utils/: retry.py  scrape_quality.py  symbol_utils.py  text_processing.py
ma-prospecting-platform/frontend/: Dockerfile  next.config.ts  package-lock.json
ma-prospecting-platform/frontend/app/: layout.tsx
ma-prospecting-platform/frontend/lib/: api.ts  (+2 more)
(+19 files in other folders)
