[project]
name = "ma-prospecting-platform"
version = "0.1.0"
description = "AI-powered M&A Prospecting Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "exa-py>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
playwright = [
    "playwright>=1.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
